# whatsapp-duolingo

./: .gitignore  README.md  alembic.ini  pyproject.toml  pytest.ini  test_audit_log.md  whatsapp_duolingo.db
docs/: 1_Business_Product_PRD.md  2_Technical_PRD.md  3_Development_Plan.md  5_Best_Practices.md  6_Data_Schema.md  7_Curriculum_Structure.md  8_Backlog_Technical_Debt.md  9_Architecture_Diagrams.md
scripts/: curriculum.db  generate_spanish_b1_curriculum.py  init_curriculum_database.py  init_exercise_schemas.py  run_curriculum_generation.py  view_curriculum_database.py
src/: main.py
src/api/routes/: webhook_whatsapp.py
src/core/: config.py  exceptions.py
src/data/: __init__.py  models.py
src/data/migrations/: env.py
src/data/repositories/: base.py  exercise.py  exercise_repo.py  user.py  user_progress.py
src/orchestrator/: content_orchestrator.py  core.py  curriculum_seed.py  models.py  placement_test.py  router.py  session_manager.py
tests/: audit_logger.py  conftest.py
tests/e2e/: test_curriculum_generation_e2e.py  test_full_flow.py  test_onboarding_flow.py  test_perfect_student_simulation.py
tests/integration/: test_curriculum_generation_integration.py  test_db_schema.py  test_migrations.py  test_whatsapp_send.py
tests/performance/: test_load_testing_content_factory.py
tests/regression/: test_phase_i_parity.py
tests/unit/: test_config.py  test_content_generation.py  test_curriculum_generation.py  test_curriculum_seed.py  test_judge.py  test_langsmith.py  test_placement_test.py  test_repositories.py  test_tone.py  test_whatsapp_utils.py
(+18 files in other folders)
